# viaduk-bot

./: main.py  pyproject.toml  requirements.txt  tg_bot.db
handlers/: markups.py  user.py
models/dbs/: models.py  orm.py
tables/: garages.xlsx
utils/: table_parser.py
